k8s/base/service.yaml

apiVersion: v1
kind: Service
metadata:
  name: k8s-lab
spec:
  selector:
    app: k8s-lab
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8000
  type: ClusterIP
